Database is connected

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 PORT=4000
+MONGODB_URL=mongodb+srv://mdkabirulhossainj_db_user:ERWgymcYW34OBZGs@cluster0.s1ilgmm.mongodb.net/Noborup?retryWrites=true&w=majority&appName=Cluster0
