Admin login user Controller function is created

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,5 @@ CLOUDINARY_API_KEY=671271713581582
 CLOUDINARY_SECRET_KEY=IroYMzXwGlOg0eTzp3jZ7lVPqQA
 CLOUDINARY_NAME=dur7ye4il
 JWT_SECRET=Noborupkabirul
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=admin12345
