order status updated

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,4 @@ CLOUDINARY_NAME=dur7ye4il
 JWT_SECRET=Noborupkabirul
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_PASSWORD=admin12345
+STRIPE_SECRET_KEY=stripe_secret_key
